adding member sidebar + navbar + dashboard events

--- a/Resources/views/userAdmin.html.twig
+++ b/Resources/views/userAdmin.html.twig
@@ -227,8 +227,10 @@
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         <section class="content-header">
+            <p><a href="#" onclick="window.history.back()" class="btn btn-default pull-left"><i class="fa fa-caret-left"></i>
+                    Retour </a></p>
             {% block pageTitle %}
-                <h1>
+                <h1 class="text-center">
                     Dashboard
                     <small>Version 2.0</small>
                 </h1>
