--- a/Resources/views/pre-admin.html.twig
+++ b/Resources/views/pre-admin.html.twig
@@ -59,7 +59,7 @@
 <!-- Site wrapper -->
 <div class="wrapper">
 
-    {% include 'DyweeCoreBundle:Admin:navbar.html.twig' %}
+    {% include '@DyweeCoreBundle/Admin/navbar.html.twig' %}
 
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
