--- a/Resources/views/userAdmin.html.twig
+++ b/Resources/views/userAdmin.html.twig
@@ -216,7 +216,7 @@
                 <!-- sidebar menu: : style can be found in sidebar.less -->
                 <ul class="sidebar-menu">
                     {% block leftSideBarContent %}
-                        {{ render(controller('DyweeCoreBundle:Member:sidebar')) }}
+                        {{ render(controller('Dywee\\CoreBundle\\Controller\\MemberController:sidebarAction')) }}
                     {% endblock %}
                 </ul>
             </section>
